--- a/CCNUtils/DBWrangler/DBWrangler.Test.Core/DBWrangler.Test.Core.vbproj
+++ b/CCNUtils/DBWrangler/DBWrangler.Test.Core/DBWrangler.Test.Core.vbproj
@@ -54,6 +54,7 @@
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Npgsql, Version=2.0.14.3, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
       <HintPath>..\DBWrangler.TPA\Npgsql\Npgsql.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="Oracle.DataAccess">
       <HintPath>..\DBWrangler.TPA\Oracle\Oracle.DataAccess.dll</HintPath>
