--- a/CCNUtils/DBWrangler/DBWrangler/DBWrangler.vbproj
+++ b/CCNUtils/DBWrangler/DBWrangler/DBWrangler.vbproj
@@ -107,9 +107,12 @@
   <ItemGroup>
     <Compile Include="Connectors\DefaultConnector.vb" />
     <Compile Include="Connectors\PgConnector.vb" />
+    <Compile Include="Converting.vb" />
     <Compile Include="Enums\DatabaseVendor.vb" />
     <Compile Include="Exceptions\FileFormatException.vb" />
     <Compile Include="Exceptions\SqlGenerationException.vb" />
+    <Compile Include="Exceptions\UnrecognizedEnumValueException.vb" />
+    <Compile Include="ExtensionMethods.vb" />
     <Compile Include="Model\Filtering\DBValues.vb" />
     <Compile Include="Model\Filtering\Condition.vb" />
     <Compile Include="Model\Filtering\Variable.vb" />
@@ -161,7 +164,9 @@
     </Compile>
     <Compile Include="Connectors\MsConnector.vb" />
     <Compile Include="Connectors\OracleConnector.vb" />
+    <Compile Include="ProgressReporter.vb" />
     <Compile Include="Services\Connector.vb" />
+    <Compile Include="Services\IO\XmlService.vb" />
     <Compile Include="Services\SqlProviders\Common\SqlInfo.vb" />
     <Compile Include="Services\SqlProviders\Common\SqlInsertFiltered.vb" />
     <Compile Include="Services\SqlProviders\Microsoft\MsInsertFiltered.vb" />
@@ -243,20 +248,6 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\CCNCore\CCN.Core.VB\CCN.Core.VB.vbproj">
-      <Project>{34580198-126A-4387-B116-92041D8BF7A6}</Project>
-      <Name>CCN.Core.VB</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\CCNCore\CCN.Model\CCN.Model.vbproj">
-      <Project>{AEA0CD2F-2F35-45E3-B381-7D0685E103A5}</Project>
-      <Name>CCN.Model</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\CCNCore\CCN.Services\CCN.Services.vbproj">
-      <Project>{F9DC428E-4AEC-4968-8E4E-39A71FFBE6F5}</Project>
-      <Name>CCN.Services</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
